--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chalk": "5.4.1",
     "eslint": "8.49.0",
     "eslint-config-htmlacademy": "9.1.1",
+    "json-server": "1.0.0-beta.3",
     "prettier": "3.5.3",
     "rimraf": "5.0.1",
     "ts-node": "10.9.1",
